--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.24.0",
-    "next": "12.0.2",
+    "next": "^12.0.7",
     "next-themes": "^0.0.15",
     "react": "17.0.2",
     "react-bootstrap": "^2.0.2",
