--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-dom": "17.0.2",
     "react-hook-form": "^7.19.3",
     "react-icons": "^4.3.1",
-    "react-switch": "^6.0.0"
+    "react-switch": "^6.0.0",
+    "sass": "^1.45.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
