--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "17.0.2",
     "react-hook-form": "^7.19.3",
     "react-icons": "^4.3.1",
+    "react-router-dom": "^6.2.1",
     "react-switch": "^6.0.0",
     "sass": "^1.45.0"
   },
