--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.1",
     "react-switch": "^6.0.0",
-    "sass": "^1.45.0"
+    "sass": "^1.45.0",
+    "swr": "^1.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
